--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <span class="gradient-text">Website Previews</span>
       </h1>
       <p class="text-xl text-gray-600 max-w-3xl mx-auto mobile-text">
-        Welcome to our preview portal! Here you can view and test your website before it goes live. 
-        Each preview is a fully functional version of your site for your review and feedback.
+        Welcome to our preview portal! We currently have <span class="font-semibold text-blue-600">1 active project</span> and <span class="font-semibold text-green-600">42 completed projects</span>. 
+        Contact us to get started on your website project and it will appear here for preview once ready.
       </p>
     </div>
 
@@ -178,34 +178,31 @@
           </ul>
         </div>
       </div>
-    </div>
-
-    <!-- PREVIEW LISTINGS SECTION -->
+    </div>    <!-- PREVIEW LISTINGS SECTION -->
     <div class="mb-12">
-      <h2 class="text-3xl font-bold text-center mb-8 text-gray-800">Available Previews</h2>
+      <h2 class="text-3xl font-bold text-center mb-8 text-gray-800">Available Project Spots</h2>
       
       <!-- PREVIEW GRID -->
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 preview-grid">
-        
-        <!-- SAMPLE PREVIEW CARD 1 -->
+          <!-- SHEHZAAD'S PORTFOLIO -->
         <div class="preview-card bg-white rounded-xl overflow-hidden card-shadow">
           <div class="relative">
             <div class="bg-gradient-to-r from-blue-500 to-purple-600 h-32 flex items-center justify-center">
-              <i class="bi bi-globe text-white text-3xl"></i>
+              <i class="bi bi-person-circle text-white text-3xl"></i>
             </div>
             <div class="absolute top-3 right-3">
               <span class="status-badge status-ready">Ready for Review</span>
             </div>
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-semibold text-gray-800 mb-2">Sample Restaurant Website</h3>
-            <p class="text-gray-600 mb-4">A modern restaurant website with menu, reservations, and contact information.</p>
+            <h3 class="text-xl font-semibold text-gray-800 mb-2">Shehzaad's Portfolio</h3>
+            <p class="text-gray-600 mb-4">Professional portfolio website showcasing skills, projects, and experience.</p>
             <div class="flex items-center justify-between">
               <span class="text-sm text-gray-500">
                 <i class="bi bi-calendar mr-1"></i>
-                Updated: Dec 20, 2024
+                Updated: June 22, 2025
               </span>
-              <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200">
+              <a href="https://shehzaadbhamla.com" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200">
                 <i class="bi bi-eye mr-1"></i>
                 View Preview
               </a>
@@ -213,49 +210,49 @@
           </div>
         </div>
 
-        <!-- SAMPLE PREVIEW CARD 2 -->
+        <!-- AVAILABLE SPOT 2 -->
         <div class="preview-card bg-white rounded-xl overflow-hidden card-shadow">
           <div class="relative">
-            <div class="bg-gradient-to-r from-green-500 to-teal-600 h-32 flex items-center justify-center">
-              <i class="bi bi-shop text-white text-3xl"></i>
+            <div class="bg-gradient-to-r from-gray-400 to-gray-600 h-32 flex items-center justify-center">
+              <i class="bi bi-plus-circle text-white text-3xl"></i>
             </div>
             <div class="absolute top-3 right-3">
-              <span class="status-badge status-review">Under Review</span>
+              <span class="status-badge status-development">Available Spot</span>
             </div>
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-semibold text-gray-800 mb-2">Local Business Portfolio</h3>
-            <p class="text-gray-600 mb-4">Professional portfolio showcasing services, testimonials, and contact details.</p>
+            <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Slot #2</h3>
+            <p class="text-gray-600 mb-4">This spot is available for your next website project. Contact us to get started!</p>
             <div class="flex items-center justify-between">
               <span class="text-sm text-gray-500">
                 <i class="bi bi-calendar mr-1"></i>
-                Updated: Dec 18, 2024
+                Status: Available
               </span>
-              <a href="#" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200">
-                <i class="bi bi-eye mr-1"></i>
-                View Preview
-              </a>
+              <button class="bg-gray-400 text-white px-4 py-2 rounded-lg cursor-not-allowed">
+                <i class="bi bi-clock mr-1"></i>
+                Coming Soon
+              </button>
             </div>
           </div>
         </div>
 
-        <!-- SAMPLE PREVIEW CARD 3 -->
+        <!-- AVAILABLE SPOT 3 -->
         <div class="preview-card bg-white rounded-xl overflow-hidden card-shadow">
           <div class="relative">
-            <div class="bg-gradient-to-r from-orange-500 to-red-600 h-32 flex items-center justify-center">
-              <i class="bi bi-building text-white text-3xl"></i>
+            <div class="bg-gradient-to-r from-gray-400 to-gray-600 h-32 flex items-center justify-center">
+              <i class="bi bi-plus-circle text-white text-3xl"></i>
             </div>
             <div class="absolute top-3 right-3">
-              <span class="status-badge status-development">In Development</span>
+              <span class="status-badge status-development">Available Spot</span>
             </div>
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-semibold text-gray-800 mb-2">Non-Profit Organization</h3>
-            <p class="text-gray-600 mb-4">Community-focused website with donation system and event calendar.</p>
+            <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Slot #3</h3>
+            <p class="text-gray-600 mb-4">This spot is available for your next website project. Contact us to get started!</p>
             <div class="flex items-center justify-between">
               <span class="text-sm text-gray-500">
                 <i class="bi bi-calendar mr-1"></i>
-                Updated: Dec 15, 2024
+                Status: Available
               </span>
               <button class="bg-gray-400 text-white px-4 py-2 rounded-lg cursor-not-allowed">
                 <i class="bi bi-clock mr-1"></i>
@@ -266,19 +263,17 @@
         </div>
 
       </div>
-    </div>
-
-    <!-- CONTACT SECTION -->
+    </div>    <!-- CONTACT SECTION -->
     <div class="bg-gradient-to-r from-blue-600 to-green-600 text-white py-12 px-8 rounded-2xl text-center slide-up">
-      <h2 class="text-3xl font-bold mb-4">Need Help or Have Feedback?</h2>
+      <h2 class="text-3xl font-bold mb-4">Ready to Start Your Website Project?</h2>
       <p class="text-xl mb-6 text-blue-100">
-        We're here to help! Contact us with any questions or requested changes.
+        We have available spots for new projects! Contact us to get started and your website preview will appear here once ready.
       </p>
       <div class="flex flex-col md:flex-row gap-4 justify-center">
         <a href="mailto:ayhamissa416@gmail.com" 
            class="bg-white text-blue-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors duration-200">
           <i class="bi bi-envelope mr-2"></i>
-          Send Feedback
+          Start a Project
         </a>
         <a href="https://babcoding.com" 
            class="border-2 border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-blue-600 transition-colors duration-200">
