--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <a href="https://babcoding.com" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-house-door mr-1"></i>Main Website
             </a>
-            <a href="mailto:ayhamissa416@gmail.com" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
+            <a href="mailto:contact@babcoding.com" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-envelope mr-1"></i>Contact
             </a>
           </div>
@@ -225,7 +225,7 @@
         <a href="https://babcoding.com">
           <i class="bi bi-house-door mr-2"></i>Main Website
         </a>
-        <a href="mailto:ayhamissa416@gmail.com">
+        <a href="mailto:contact@babcoding.com">
           <i class="bi bi-envelope mr-2"></i>Contact
         </a>
       </div>
@@ -366,7 +366,7 @@
         We have available spots for new projects! Contact us to get started and your website preview will appear here once ready.
       </p>
       <div class="flex flex-col md:flex-row gap-4 justify-center">
-        <a href="mailto:ayhamissa416@gmail.com" 
+        <a href="mailto:contatc@babcoding.com" 
            class="bg-white text-blue-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors duration-200">
           <i class="bi bi-envelope mr-2"></i>
           Start a Project
